--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1928,6 +1928,25 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\CLRI7CYA\\Corlett - 2011 - Impacts of warming on tropical lowland rainforests.pdf;C\:\\Users\\Me\\Zotero\\storage\\8SI5CSGP\\S0169534711001947.html}
 }
 
+@article{couvreurWaterTransportTall2018,
+  title = {Water Transport through Tall Trees: A Vertically Explicit, Analytical Model of Xylem Hydraulic Conductance in Stems},
+  shorttitle = {Water Transport through Tall Trees},
+  author = {Couvreur, Valentin and Ledder, Glenn and Manzoni, Stefano and Way, Danielle A. and Muller, Erik B. and Russo, Sabrina E.},
+  date = {2018},
+  journaltitle = {Plant, Cell \& Environment},
+  volume = {41},
+  number = {8},
+  pages = {1821--1839},
+  issn = {1365-3040},
+  doi = {10.1111/pce.13322},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/pce.13322},
+  urldate = {2021-02-02},
+  abstract = {Trees grow by vertically extending their stems, so accurate stem hydraulic models are fundamental to understanding the hydraulic challenges faced by tall trees. Using a literature survey, we showed that many tree species exhibit continuous vertical variation in hydraulic traits. To examine the effects of this variation on hydraulic function, we developed a spatially explicit, analytical water transport model for stems. Our model allows Huber ratio, stem-saturated conductivity, pressure at 50\% loss of conductivity, leaf area, and transpiration rate to vary continuously along the hydraulic path. Predictions from our model differ from a matric flux potential model parameterized with uniform traits. Analyses show that cavitation is a whole-stem emergent property resulting from non-linear pressure-conductivity feedbacks that, with gravity, cause impaired water transport to accumulate along the path. Because of the compounding effects of vertical trait variation on hydraulic function, growing proportionally more sapwood and building tapered xylem with height, as well as reducing xylem vulnerability only at branch tips while maintaining transport capacity at the stem base, can compensate for these effects. We therefore conclude that the adaptive significance of vertical variation in stem hydraulic traits is to allow trees to grow tall and tolerate operating near their hydraulic limits.},
+  langid = {english},
+  keywords = {gravity,Huber ratio,matric flux potential,sapwood saturated conductivity,tree height,water relations,xylem cavitation,xylem transport},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/pce.13322}
+}
+
 @online{CSIROPUBLISHINGFunctional,
   title = {{{CSIRO PUBLISHING}} | {{Functional Plant Biology}}},
   url = {https://www-publish-csiro-au.smithsonian.idm.oclc.org/fp/ExportCitation/FP10010},
@@ -9027,6 +9046,22 @@
   keywords = {Fagus sylvatica,mean stomatal conductance,stomatal sensitivity,tree height},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1046/j.1365-3040.2000.00553.x},
   file = {C\:\\Users\\Me\\Zotero\\storage\\YLDUEHZW\\Schäfer et al. - 2000 - The effect of tree height on crown level stomatal .pdf;C\:\\Users\\Me\\Zotero\\storage\\T4SDTVJG\\j.1365-3040.2000.00553.html}
+}
+
+@article{scharnweberConfessionsSolitaryOaks2019,
+  title = {Confessions of Solitary Oaks: We Grow Fast but We Fear the Drought},
+  shorttitle = {Confessions of Solitary Oaks},
+  author = {Scharnweber, Tobias and Heinze, Lisa and Cruz-García, Roberto and van der Maaten-Theunissen, Marieke and Wilmking, Martin},
+  options = {useprefix=true},
+  date = {2019-06},
+  journaltitle = {Dendrochronologia},
+  volume = {55},
+  pages = {43--49},
+  issn = {11257865},
+  doi = {10.1016/j.dendro.2019.04.001},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S1125786518302017},
+  urldate = {2019-07-18},
+  langid = {english}
 }
 
 @article{scheffersMicrohabitatsReduceAnimal2013,
