--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -11265,6 +11265,21 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\XEP4LAR2\\Webster et al. - 2017 - Improving representation of canopy temperatures fo.pdf;C\:\\Users\\Me\\Zotero\\storage\\S9VWKNG3\\2017JD026581.html}
 }
 
+@article{websterThreedimensionalThermalCharacterization2018,
+  title = {Three-Dimensional Thermal Characterization of Forest Canopies Using {{UAV}} Photogrammetry.},
+  author = {Webster, C. and Westoby, M. and Rutter, N. and Jonas, T.},
+  date = {2018},
+  journaltitle = {Remote Sensing of Environment},
+  volume = {209},
+  pages = {835--847},
+  publisher = {{Elsevier Ltd}},
+  issn = {0034-4257},
+  url = {https://www.cabdirect.org/cabdirect/abstract/20183154732},
+  urldate = {2021-10-02},
+  abstract = {Measurements of vegetation structure have become a valuable tool for ecological research and environmental management. However, data describing the thermal 3D structure of canopies and how they vary both spatially and temporally remain sparse. Coincident RGB and thermal imagery from a UAV platform were collected of both a standalone tree and a relatively dense forest stand in the sub-alpine...},
+  langid = {english}
+}
+
 @article{weerasingheCanopyPositionAffects2014,
   title = {Canopy Position Affects the Relationships between Leaf Respiration and Associated Traits in a Tropical Rainforest in {{Far North Queensland}}},
   author = {Weerasinghe, Lasantha K. and Creek, Danielle and Crous, Kristine Y. and Xiang, Shuang and Liddell, Michael J. and Turnbull, Matthew H. and Atkin, Owen K.},
