--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -4050,6 +4050,21 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\3TFPULCJ\\S0168192308000439.html}
 }
 
+@article{irvineAgerelatedChangesEcosystem2004,
+  title = {Age-Related Changes in Ecosystem Structure and Function and Effects on Water and Carbon Exchange in Ponderosa Pine},
+  author = {Irvine, J. and Law, B. E. and Kurpius, M. R. and Anthoni, P. M. and Moore, D. and Schwarz, P. A.},
+  date = {2004-07-01},
+  journaltitle = {Tree Physiology},
+  volume = {24},
+  number = {7},
+  pages = {753--763},
+  issn = {0829-318X},
+  doi = {10.1093/treephys/24.7.753},
+  url = {https://doi.org/10.1093/treephys/24.7.753},
+  urldate = {2021-10-02},
+  abstract = {As forests age, their structure and productivity change, yet in some cases, annual rates of water loss remain unchanged. To identify mechanisms that might explain such observations, and to determine if widely different age classes of forests differ functionally, we examined young (Y, 25 years), mature (M, 90 years) and old (O, 250 years) ponderosa pine (Pinus ponderosa Dougl. ex P. Laws.) stands growing in a drought-prone region of central Oregon. Although the stands differed in tree leaf area index (LAIT) (Y = 0.9, M = 2.8, O = 2.1), cumulative tree transpiration measured by sap flow did not differ substantially during the growing season (100–112 mm). Yet when water was readily available, transpiration per unit leaf area of the youngest trees was about three times that of M trees and five times that of O trees. These patterns resulted from a nearly sixfold difference in leaf specific conductance (KL) between the youngest and oldest trees. At the time of maximum transpiration in the Y stand in May–June, gross carbon uptake (gross ecosystem production, GEP) was similar for Y and O stands despite an almost twofold difference in stand leaf area index (LAIS). However, the higher rate of water use by Y trees was not sustainable in the drought-prone environment, and between spring and late summer, KL of Y trees declined fivefold compared with a nearly twofold decline for M trees and a \&lt; 30\% reduction in O trees. Because the Y stand contained a significant shrub understory and more exposed soil, there was no appreciable difference in mean daily latent energy fluxes between the Y stand and the older stands as measured by the eddy-covariance technique. These patterns resulted in 60 to 85\% higher seasonal GEP and 55 to 65\% higher water-use efficiency at the M and O stands compared with the Y stand.}
+}
+
 @article{ishidaContrastingSeasonalLeaf2006,
   title = {Contrasting Seasonal Leaf Habits of Canopy Trees between Tropical Dry-Deciduous and Evergreen Forests in {{Thailand}}},
   author = {Ishida, Atsushi and Diloksumpun, Sapit and Ladpala, Phanumard and Staporn, Duriya and Panuthai, Samreong and Gamo, Minoru and Yazaki, Kenichi and Ishizuka, Moriyoshi and Puangchit, Ladawan},
@@ -4244,6 +4259,20 @@
   abstract = {Canopy temperature exerts fundamental controls on plant-level physiological processes such as photosynthesis, respiration, transpiration, and growth and development, and consequently on ecosystem fluxes of carbon, water, and energy. New thermal remote sensing instruments and algorithms are offering unprecedented measurements of surface canopy temperature across space and time. However, airborne and satellite sensors only measure canopies from above, and the vertical heterogeneity of canopy temperatures remains largely unexplored. We combined data from the ECOSTRESS mission, lidar, and a FLIR thermal camera deployed in a Californian woodland savanna to answer the following questions: (1) What is the vertical heterogeneity of tree canopy temperature in a Mediterranean woodland savanna, and how does it vary diurnally, seasonally, and in response to environmental conditions?, and (2) How do blue oak (Quercus douglasii) tree canopy temperatures as measured by ECOSTRESS correspond with FLIR-measured, vertically-resolved temperatures? At any particular time, locations within a single blue oak canopy can vary by more than 4°C, while the difference in temperature between the top quarter and bottom quarter of the canopy can range ±2°C. Canopy temperatures are considerably more homogeneous at night and at other times with low incoming solar radiation. Comparisons with the newly-available ECOSTRESS thermal measurements will also be presented. Based on results from the thermal imaging camera, we predict that ECOSTRESS measurements are a good proxy for bulk canopy temperature under conditions of low incoming radiation, but are comparatively non-representative of canopy temperature when the temperature at the bottom of the canopy is significantly warmer or cooler than the temperature at the top, such as when the understory grass is dry, hot, and strongly radiating.},
   eventtitle = {{{AGU Fall Meeting Abstracts}}},
   keywords = {0414 Biogeochemical cycles,0416 Biogeophysics,0426 Biosphere/atmosphere interactions,0476 Plant ecology,and modeling,BIOGEOSCIENCES,processes}
+}
+
+@article{jonesManagingRedPine2019,
+  title = {Managing Red Pine Stand Structure to Mitigate Drought Impacts},
+  author = {Jones, Samantha M. and Bottero, Alessandra and Kastendick, Douglas N. and Palik, Brian J.},
+  date = {2019-10},
+  journaltitle = {Dendrochronologia},
+  volume = {57},
+  pages = {125623},
+  issn = {11257865},
+  doi = {10.1016/j.dendro.2019.125623},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S1125786519300335},
+  urldate = {2021-10-02},
+  langid = {english}
 }
 
 @article{juckerCanopyStructureTopography2018,
@@ -11711,6 +11740,25 @@
   langid = {english},
   keywords = {Environmental correlation,Leaf morphological trait,Leaf type,Venation pattern},
   file = {C\:\\Users\\Me\\Zotero\\storage\\7XLZXVYC\\Xu et al. - 2009 - Leaf morphology correlates with water and light av.pdf;C\:\\Users\\Me\\Zotero\\storage\\FKHF7AM2\\S1002007109003013.html}
+}
+
+@article{xuSeasonalVariabilityForest2020,
+  title = {Seasonal Variability of Forest Sensitivity to Heat and Drought Stresses: A Synthesis Based on Carbon Fluxes from {{North American}} Forest Ecosystems},
+  shorttitle = {Seasonal Variability of Forest Sensitivity to Heat and Drought Stresses},
+  author = {Xu, Bing and Arain, M. Altaf and Black, T. Andrew and Law, Beverly E. and Pastorello, Gilberto Z. and Chu, Housen},
+  date = {2020},
+  journaltitle = {Global Change Biology},
+  volume = {26},
+  number = {2},
+  pages = {901--918},
+  issn = {1365-2486},
+  doi = {10.1111/gcb.14843},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/gcb.14843},
+  urldate = {2021-10-02},
+  abstract = {Climate extremes such as heat waves and droughts are projected to occur more frequently with increasing temperature and an intensified hydrological cycle. It is important to understand and quantify how forest carbon fluxes respond to heat and drought stress. In this study, we developed a series of daily indices of sensitivity to heat and drought stress as indicated by air temperature (Ta) and evaporative fraction (EF). Using normalized daily carbon fluxes from the FLUXNET Network for 34 forest sites in North America, the seasonal pattern of sensitivities of net ecosystem productivity (NEP), gross ecosystem productivity (GEP) and ecosystem respiration (RE) in response to Ta and EF anomalies were compared for different forest types. The results showed that warm temperatures in spring had a positive effect on NEP in conifer forests but a negative impact in deciduous forests. GEP in conifer forests increased with higher temperature anomalies in spring but decreased in summer. The drought-induced decrease in NEP, which mostly occurred in the deciduous forests, was mostly driven by the reduction in GEP. In conifer forests, drought had a similar dampening effect on both GEP and RE, therefore leading to a neutral NEP response. The NEP sensitivity to Ta anomalies increased with increasing mean annual temperature. Drier sites were less sensitive to drought stress in summer. Natural forests with older stand age tended to be more resilient to the climate stresses compared to managed younger forests. The results of the Classification and Regression Tree analysis showed that seasons and ecosystem productivity were the most powerful variables in explaining the variation of forest sensitivity to heat and drought stress. Our results implied that the magnitude and direction of carbon flux changes in response to climate extremes are highly dependent on the seasonal dynamics of forests and the timing of the climate extremes.},
+  langid = {english},
+  keywords = {climatic stresses,drought,eddy covariance technique,FLUXNET2015,forest carbon cycle,heat wave,net ecosystem productivity},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/gcb.14843}
 }
 
 @article{xuSeasonalVariationTemperature2006,
