--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -334,7 +334,7 @@ Table `r table_leaf_metabolism`, cont.
 
 $\dagger$ Forest types are coded as follows: TrB = tropical broadleaf; TeB = temperate broadleaf; TeN = temperate needleleaf (conifer); BoN= boreal needleleaf (conifer).
 
-$\ddagger$ 1. Kafuti et al. 2020; 2. Van Wittenberghe et al. 2012; 3. Roberts et al. 1990; 4. Dang et al. 1997; 5. Marenco et al. 2017; 6. Ambrose et al. 2015; 7. Zweifel et al. 2001; 8. Slot et al. 2019; 9. Hernandez et al. 2020; 10. Urban et al. 2007; 11. Carter and Cavaleri 2018; 12. Martin et al. 1999; 13. Mau et al. 2018;  14. Kosugi et al. 2012; 15. Niinemets et al. 2015; 16. Bachofen et al. 2020; 17. Hamerlynck and Knapp 1994; 18. Coble et al. 2017; 19. Wyka et al. 2012; 20. Rijkerse et al. 2000; 21. Ishida et al. 1999; 22. Weerasinghe et al. 2014; 23. Scartazza et al. 2016; 24. Miller et al. 2021; 25. Harris and Medina 2013; 26. Legner et al. 2014; 27. Kitao et al. 2012; 28. Fauset et al. 2018; 29. Rey-Sanchez et al. 2016; 30. Muller et al. 2021; 31. Curtis et al. 2019; 32. Mier et al. 2001; 33. Turnbull et al. 2003; 34. Araki et al. 2017; 35. Bolstad et al. 1999; 36. Kenzo et al. 2015; 37. Harley et al. 1996; 38. Xu and Griffin 2006; 39. Atherton et al. 2017; 40. Carter et al. 2021; 41. Sack et al. 2003; 42. Taylor et al. 2021; 43. Harley et al. 1997; 44. Niinemets and Sun, 2014; 45. Sharkey and Monson, 2014; 46. Saimpraga et al. 2013
+$\ddagger$ 1. Kafuti et al. 2020; 2. Van Wittenberghe et al. 2012; 3. Roberts et al. 1990; 4. Dang et al. 1997; 5. Marenco et al. 2017; 6. Ambrose et al. 2015; 7. Zweifel et al. 2001; 8. Slot et al. 2019; 9. Hernandez et al. 2020; 10. Urban et al. 2007; 11. Carter and Cavaleri 2018; 12. Martin et al. 1999; 13. Mau et al. 2018;  14. Kosugi et al. 2012; 15. Niinemets et al. 2015; 16. Bachofen et al. 2020; 17. Hamerlynck and Knapp 1994; 18. Coble et al. 2017; 19. Wyka et al. 2012; 20. Rijkerse et al. 2000; 21. Ishida et al. 1999; 22. Weerasinghe et al. 2014; 23. Scartazza et al. 2016; 24. Miller et al. 2021; 25. Harris and Medina 2013; 26. Legner et al. 2014; 27. Kitao et al. 2012; 28. Fauset et al. 2018; 29. Rey-Sanchez et al. 2016; 30. Muller et al. 2021; 31. Curtis et al. 2019; 32. Mier et al. 2001; 33. Turnbull et al. 2003; 34. Araki et al. 2017; 35. Bolstad et al. 1999; 36. Kenzo et al. 2015; 37. Harley et al. 1996; 38. Xu and Griffin 2006; 39. Atherton et al. 2017; 40. Carter et al. 2021; 41. Sack et al. 2003; 42. Taylor et al. 2021; 43. Harley et al. 1997; 44. Niinemets and Sun, 2014; 45. Sharkey and Monson, 2014; 46. Simpraga et al. 2013
 
 ** composite climatic stress variable from canopy temperature, vapour pressure deficit, and relative humidity is higher in lower canopy
 ```{r eval=FALSE, echo=FALSE}
@@ -395,8 +395,8 @@ Emission of the VOCs isoprene and a diversity of monoterpenes are similarly ligh
 In contrast to VOCs stored in oils that are released passively by heat and wounding, such as the monoterpenes responsible for pine scent, light-dependent emissions are linked to photosynthetic substrate supply and are dynamically tuned to environmental and metabolic conditions as a component of metabolic regulatory processes [@monsonLeafIsopreneEmission2021; @laothawornkitkulBiogenicVolatileOrganic2009; @lantzIsopreneNewInsights2019; @riedlmeierMonoterpenesSupportSystemic2017b]. 
 Due to its much higher emission rates and relative ease of detectability, isoprene has received far more study in the field, though both classes of VOC are expressed by a wide diversity of angiosperms and gymnosperms across all biomes of the globe [see @taylorNewFieldInstrument2021 and references therein]. 
 Within species, isoprene emission rates tend to increase toward brighter and hotter microenvironments [@niinemetsPhotosynthesisResourceDistribution2007], and across landscapes, emitting species increase in relative abundance toward hotter climates, exceeding half of trees in warm tropical forests [@taylorIsopreneEmissionStructures2018a]. 
-However, a recent study found a contrasting interspecific vertical structuring of emission capacities, with more emitting species and higher species-maximum emission rates in the mid-canopy region of an Amazonian forest [@taylorNewFieldInstrument2021]. 
-Similarly, within tree crowns of European beech, monoterpene emissions were found to be highest in semi-shaded leaves beneath the canopy surface [@simpragaVerticalCanopyGradient2013]. 
+However, a recent study found a contrasting interspecific vertical structuring of emission capacities, with more emitting species and higher species-maximum emission rates in the mid-canopy region of an Amazonian forest [Table `r table_leaf_metabolism`, @taylorNewFieldInstrument2021]. 
+Similarly, within tree crowns of European beech, monoterpene emissions were found to be highest in semi-shaded leaves beneath the canopy surface [Table `r table_leaf_metabolism`, @simpragaVerticalCanopyGradient2013]. 
 This pattern may indicate the importance of temporal variability in thermal conditions as distinct from the long-term average. 
 Temperature sensitive VOC emissions have been hypothesized to enable real-time acclimation to rapidly changing leaf thermal environments typical of the mid-canopy region [see section 1, @sharkeyIsopreneEmissionPlants2008]. 
 Future work seeking to understand how temporal dynamics of leaf heating [see @leighInfluenceLeafSize2017] vary through the canopy and influence leaf function will be important for resolving the role of VOCs  in forest thermal sensitivity across the vertical gradient. 
@@ -430,7 +430,7 @@ However, only a relatively limited number of studies have directly examined drou
 These have most commonly found greater sensitivity to low precipitation or seasonally high temperatures among larger, more exposed trees [Fig. `r fig_treerings`, @trouillierSizeMattersComparison2018; @gillerotTreeNeighbourhoodDiversity2020; @mcgregorTreeHeightLeaf2021;@anderson-teixeiraJointEffectsClimateinpress], corroborating evidence from globally distributed forest censuses that larger trees tend to undergo larger growth declines during drought [@bennettLargerTreesSuffer2015]. 
 In addition to lower drought resistance of growth, larger trees frequently exhibit lower ability to recover from stress [i.e., resilience, @mcgregorTreeHeightLeaf2021; @gillerotTreeNeighbourhoodDiversity2020], and greater increases in mortality [@bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019].
 Mechanistically, this is almost certainly driven in part by the fact that larger trees have their crowns in a microenvironment that is more challenging during drought [Figs. `r fig_schematic` - `r fig_leaf_T`, @scharnweberConfessionsSolitaryOaks2019], yet there is also reason to believe that height itself provides disadvantages [@olsonPlantHeightHydraulic2018; @couvreurWaterTransportTall2018].  
-Indeed, despite the potential for shorter trees in open forests to experience greater environmental stress [@curtis_intracanopy_2019], greater drought sensitivity of larger trees has been observed in open as well as closed-canopy forests [@bennettLargerTreesSuffer2015; @anderson-teixeiraJointEffectsClimateinpress], although there is also evidence that short trees in young stands are more drought-sensitive than taller trees in mature forests [@irvineAgeRelatedChanges2004].
+Indeed, despite the potential for shorter trees in open forests to experience greater environmental stress [@curtis_intracanopy_2019], greater drought sensitivity of larger trees has been observed in open as well as closed-canopy forests [@bennettLargerTreesSuffer2015; @anderson-teixeiraJointEffectsClimateinpress], although there is also evidence that short trees in young stands are more drought-sensitive than taller trees in mature forests [@irvineAgerelatedChangesEcosystem2004].
 The relative importance of exposure versus height in shaping drought sensitivity remains to be disentangled.
 
 While it is clear that drought sensitivity increases with crown height though forest vertical gradients, and hence with DBH, it remains unclear how growth sensitivity to high $T_{air}$, independent of drought, varies across this gradient.
@@ -456,7 +456,7 @@ It is less clear how thermal sensitivity of water and carbon fluxes vary across 
 We expect that transpiration, GPP, and $ANPP_{woody}$ should all be more sensitive to high temperatures in the upper canopy than in the understory -- at least under conditions of moderate to high VPD [@grossiordPlantResponsesRising2020]. 
 Because canopy trees dominate these fluxes (Fig. `r fig_ecosystem`), their responses will strongly influence the whole-ecosystem response, potentially with modest buffering by the understory. 
 Thus, for example, increases in canopy $T_{leaf}$ reduce forest GPP in the tropics [@pauTropicalForestTemperature2018]. 
-Yet there is also evidence that GPP and ecosystem respiration are less sensitive to heat and drought stress in older forests than in young forests [@XuSeasonalVariabilityForest2020], perhaps in part because of more complex vertical structuring [@jonesManagingRedPine2019].
+Yet there is also evidence that GPP and ecosystem respiration are less sensitive to heat and drought stress in older forests than in young forests [@xuSeasonalVariabilityForest2020], perhaps in part because of more complex vertical structuring [@jonesManagingRedPine2019].
 A rare example of a study comparing the climate sensitivity of C fluxes across size classes [@meakemRoleTreeSize2018] showed that $M_{woody}$ was more strongly elevated among large than small trees during an *El Niño* drought in Panama, while the smallest size classes had higher productivity during the drought, likely because of increased light in the understory. 
 It remains far less clear how thermal sensitivity varies across forest strata under wet conditions, but both physiological mechanisms (Fig. `r fig_leaf_T`) and tree ring evidence (Fig. `r fig_treerings`) suggests that understory trees may respond more negatively to hot, wet conditions. 
 Further research is required to better understand the thermal sensitivity of forest ecosystem function across strata.
