--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -8002,6 +8002,13 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\DFV3GY5Z\\Pincebourde and Casas - 2019 - Narrow safety margin in the phyllosphere during th.pdf;C\:\\Users\\Me\\Zotero\\storage\\ZSJ6SDWI\\5588.html}
 }
 
+@article{piponiotSizerelatedTreeBiomassinreview,
+  title = {Size-Related Tree Biomass Dynamics in Forests across the World},
+  author = {Piponiot, Camille and Anderson-Teixeira, K.J. and MANY\_MORE},
+  year = {in review},
+  journaltitle = {New Phytologist}
+}
+
 @online{PlantResponsesRising,
   title = {Plant Responses to Rising Vapor Pressure Deficit - {{Grossiord}} - 2020 - {{New Phytologist}} - {{Wiley Online Library}}},
   url = {https://nph.onlinelibrary.wiley.com/doi/full/10.1111/nph.16485},
